apply some media queries to style why section and logo for small screens

--- a/index.html
+++ b/index.html
@@ -42,14 +42,14 @@
             <h2 id="welcome">WHY CHOOSE ENGLISH FOR SUCCESS?</h1>
                 <div id="left-about">
                     <div class="left-about-heading">
-                        <h2>Bespoke <i class="fa-solid fa-heart-pulse"></i></h2>
+                        <h2>Bespoke <i class="fa-solid fa-pen-nib"></i></i></h2>
                         <hr>
                         <p>
                             At English for Success, we do not believe that 'one size fits all'
                         </p>
                     </div>
                     <div class="left-about-heading">
-                        <h2>Tailored <i class="fa-brands fa-fly"></i></h2>
+                        <h2>Tailored <i class="fa-solid fa-pen"></i></i></h2>
                         <hr>
                         <p>
                             We tailored our lessons to meet your individual needs.                        
@@ -58,14 +58,14 @@
                 </div>
                 <div id="right-about">
                         <div class="right-about-heading">
-                            <h2>Experience <i class="fa-solid fa-globe"></i></h2>
+                            <h2>Experience <i class="fa-solid fa-book"></i></h2>
                             <hr>
                             <p>
                                 Experienced teachers who provide you with insightful, fun and relaxed lessons.
                             </p>
                         </div>
                         <div class="right-about-heading">
-                            <h2>Online <i class="fa-solid fa-dumbbell"></i></h2>
+                            <h2>Online <i class="fa-solid fa-globe"></i></h2>
                             <hr>
                             <p>
                                 Online classes recorded. All lessons suitable for students from non-English-speaking families.                 
@@ -79,7 +79,7 @@
                 </div>
     </section>
 
-    
+
     <script src="https://kit.fontawesome.com/70893e8ef4.js" crossorigin="anonymous"></script>
 </body>
 </html>
