--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <a href="#">About Us</a>
                 </li>
                 <li>
-                    <a href="#">Services</a>
+                    <a href="/services.html">Services</a>
                 </li>
                 <li>
                     <a href="index.html" class="active">Home</a>
