add styling to content and images on Services page

--- a/services.html
+++ b/services.html
@@ -40,6 +40,7 @@
        <h1>Our Services</h1>
        <br>
        </section>
+       <section class="services-container">
        <section>
        <div class="lang">
         <div class="lang-img">
@@ -94,7 +95,7 @@
 
 
         </section>
-
+</section>
 
     <script src="https://kit.fontawesome.com/70893e8ef4.js" crossorigin="anonymous"></script>
 </body>
