--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <nav>
             <ul id="menu">
                 <li>
-                    <a href="#">Contact Us</a>
+                    <a href="contact.html">Contact Us</a>
                 </li>
                 <li>
                     <a href="#">About Us</a>
