add favicon and increase font size of menu items

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="English for Success">
     <meta name="keywords" content="English, Success, Online, Tutor">
+    <link rel='shortcut icon' type='image/x-icon' href='favicon.ico'>
     <link rel="stylesheet" href="assets/css/styles.css">
     <title>English For Success</title>
 </head>
