removed About us page until it is built

--- a/contact.html
+++ b/contact.html
@@ -23,9 +23,9 @@
                 <li>
                     <a href="contact.html" class="active">Contact Us</a>
                 </li>
-                <li>
-                    <a href="#">About Us</a>
-                </li>
+                <!-- <li>
+                    <a href="/services.html" class="active">Services</a>
+                </li>-->
                 <li>
                     <a href="/services.html">Services</a>
                 </li>
