--- a/services.html
+++ b/services.html
@@ -23,12 +23,12 @@
                 <li>
                     <a href="contact.html">Contact Us</a>
                 </li>
-                <li>
-                    <a href="#">About Us</a>
-                </li>
+                <!-- <li>
+                    <a href="#" class="active">About Us</a>
+                </li>-->
                 <li>
                     <a href="/services.html" class="active">Services</a>
-                </li>
+                </li>-->
                 <li>
                     <a href="/index.html" >Home</a>
                 </li>
