add easter offer page

--- a/index.html
+++ b/index.html
@@ -38,6 +38,13 @@
     </header>
     <section id="hero-outer">
         <div id="hero-image"></div>
+        <a href="easter.html">
+        <div id="cover-text">
+            <h3>Easter Course</h2>
+                
+            <h4>Junior and Leaving Cert</h3>
+            <h4>English and Irish</h3>
+        </div></a>
     </section>
     <section class="why">
             <h2 id="welcome">WHY CHOOSE ENGLISH FOR SUCCESS?</h1>
