--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <a href="#">About Us</a>
                 </li>-->
                 <li>
-                    <a href="/services.html">Services</a>
+                    <a href="services.html">Services</a>
                 </li>
                 <li>
                     <a href="index.html" class="active">Home</a>
