--- a/services.html
+++ b/services.html
@@ -27,10 +27,10 @@
                     <a href="#" class="active">About Us</a>
                 </li>-->
                 <li>
-                    <a href="/services.html" class="active">Services</a>
+                    <a href="services.html" class="active">Services</a>
                 </li>
                 <li>
-                    <a href="/index.html" >Home</a>
+                    <a href="index.html" >Home</a>
                 </li>
             </ul>
         </nav>
