fix services images not loading

--- a/services.html
+++ b/services.html
@@ -44,7 +44,7 @@
        <section>
        <div class="lang">
         <div class="lang-img">
-            <img src="/assets/images/girl-monitor.jpg" alt="girl at a monitor" class="lang-img">
+            <img src="assets/images/girl-monitor.jpg" alt="girl at a monitor" class="lang-img">
         </div>
         <div class="lang-info">
             <h3>Language Courses</h3> 
@@ -72,20 +72,20 @@
          </ul>
          </div>         
          <div class="prep-img">
-             <img src="/assets/images/adult-students.jpg" alt="students in a lecture" class="prep-img">
+             <img src="assets/images/adult-students.jpg" alt="students in a lecture" class="prep-img">
          </div>
          </div>
     </section>
     <section class="miscellaneous">
         <div class="misc">
 <div class="prep-img">
-             <img src="/assets/images/writing.jpg" alt="taking notes" class="misc-img">
+             <img src="assets/images/writing.jpg" alt="taking notes" class="misc-img">
          </div>
          <div class="lang-info"><h3>Miscellaneous Services</h3> 
          <hr>
          <ul>
              <li>Proofreading and editing services (academic & business)</li>
-             <li>Translation services (English, French, Irish, Chinese (Mandarin)</li>
+             <li>Translation services - English, French, Irish, Chinese (Mandarin)</li>
              <li>Personal statements & visa applications</li>
          </ul>
          </div>         
