update medium to small screen size styling of why section

--- a/services.html
+++ b/services.html
@@ -79,7 +79,7 @@
     <section class="miscellaneous">
         <div class="misc">
 <div class="prep-img">
-             <img src="../images/writing.jpg" alt="taking notes" class="misc-img">
+             <img src="assets/images/writing.jpg" alt="taking notes" class="misc-img">
          </div>
          <div class="lang-info"><h3>Miscellaneous Services</h3> 
          <hr>
