--- a/contact.html
+++ b/contact.html
@@ -27,7 +27,7 @@
                     <a href="/services.html" class="active">Services</a>
                 </li>-->
                 <li>
-                    <a href="/services.html">Services</a>
+                    <a href="services.html">Services</a>
                 </li>
                 <li>
                     <a href="index.html">Home</a>
