--- a/easter.html
+++ b/easter.html
@@ -28,7 +28,7 @@
                     <a href="#">About Us</a>
                 </li>-->
                 <li>
-                    <a href="/services.html" class="active">Services</a>
+                    <a href="services.html" class="active">Services</a>
                 </li>
                 <li>
                     <a href="index.html" >Home</a>
